# mp_backed

./: .env  .gitignore  README.md  main.py  pyproject.toml
data/: dummy_data.json
src/major_project/: __init__.py
src/major_project/api/: main.py  schemas.py
src/major_project/api/routes/: health.py  predictions.py  transcripts.py
src/major_project/models/: __init__.py  model_loader.py  predictor.py
src/major_project/utils/: __init__.py  dummy_data_loader.py
tests/: test_load_dummy_data.py
