[project]
name = "major-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Boibhav Chakraborty",email = "vaibhavchakraborty06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "major_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
